# model-toolcall-adapter-rs

./: Cargo.toml  README.md  README.zh-CN.md
src/: config.rs  main.rs  responses_store.rs  types.rs  ui.rs  upstream.rs
src/http/: mod.rs  routes.rs
src/protocol/: mod.rs
src/providers/: mod.rs  openai_compat.rs
src/providers/deepseek_web/: client.rs  mod.rs  pow_solver.js
src/wire/: chat.rs  messages.rs  responses.rs
